Fix forced mobile layout breaking split view
- Disable leftover mobile-specific code conflicting with ABC Lite flex layout
- Fixes the two-column view in embedded ABC Tools zoomed out on mobile devices

--- a/app.css
+++ b/app.css
@@ -6934,6 +6934,10 @@ display:block;
 		align-items: flex-start;
 	}
 
+	#notation-container {
+		align-items: flex-start;
+	}
+
 	#notation-spacer {
 		margin-right: 24px;
 	}
